# forscan_tools

./: .gitignore  LICENSE  README.md  RELEASING.md  forscan_cli.py  forscan_core.py  forscan_data.py  forscan_models.py  forscan_tools.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: community_intelligence_2026-02-21.md  forscan_research_notes.md
tests/: test_forscan_tools.py
