[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forscan-tools"
version = "0.2.0"
description = "Modern FORScan .abt parsing utilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "John Sirmon" }
]
dependencies = []

[project.scripts]
forscan-tools = "forscan_tools:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9"
]

[tool.setuptools]
py-modules = ["forscan_tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
